[package]
name = "banyc_polars_util"
version = "0.5.0"
edition = "2021"
description = "Banyc's polars util"
license = "MIT"
repository = "https://github.com/Banyc/banyc_polars_util.git"

[dependencies]
anyhow = "1"
hdv = { version = "0.5", features = ["polars"] }
polars = { version = "0.44", features = ["json", "lazy"] }
